kubernetes/certificate-authority/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stellar-ocsp-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: ocsp.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stellar-ocsp-service
            port:
              number: 80
